--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -5,6 +5,6 @@
 
 Please choose your operating system from below:
 
-# [Windows-Installation Windows 2000 or later]
-# [OSX-Installation Mac OS X/UNIX]
-# [Linux-Installation Linux]
+# [WindowsInstallation Windows 2000 or later]
+# [OSXInstallation Mac OS X/UNIX]
+# [LinuxInstallation Linux]
