Edited wiki page through web user interface.

--- a/wiki/RunningNATTT.wiki
+++ b/wiki/RunningNATTT.wiki
@@ -5,7 +5,7 @@
 You need to be an administrator to run NATT. However, in Linux/Mac, it is sufficient to have access to the TUN/TAP device.
 Running NATTT is with the following command on all Operating Systems:
 
-./nattt <config file>
+_./nattt <config file>_
 (Read about the [ConfigFile config file]).
 
 
