Edited wiki page through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -5,6 +5,8 @@
 Add your content here.
 
 [Installation Installation]
+[RunningNATTT Running NATTT]
+[ResolverSetup Resolver Setup]
 
 = Details =
 
