Edited wiki page through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -4,9 +4,9 @@
 
 Add your content here.
 
-[Installation Installation]
-[RunningNATTT Running NATTT]
-[ResolverSetup Resolver Setup]
+  * [Installation Installation]
+  * [RunningNATTT Running NATTT]
+  * [ResolverSetup Resolver Setup]
 
 = Details =
 
