Edited wiki page through web user interface.

--- a/wiki/Errors.wiki
+++ b/wiki/Errors.wiki
@@ -20,3 +20,5 @@ However, The NAT3 daemon checks for either a NXDOMAIN or for an empty answer sec
 This was an issue that came up with a version of BIND9 unexpectedly. The
 solution followed at that time was to upgrade the version of BIND9 to the latest
 version.
+
+Back to [Introduction introduction].
