--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -3,6 +3,11 @@
 
 = Installation =
 
+== Step 1: Download==
+Download from [http://code.google.com/p/support/source/checkout here]
+
+== Step 2: Build/Run == 
+
 Please choose your operating system for detailed instructions on how to install and set up NAT3D on your machine:
 
   # [WindowsInstallation Windows 2000 or later]
