--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -4,7 +4,8 @@
 = Installation =
 
 == Step 1: Download==
-Download from [http://code.google.com/p/support/source/checkout here] via SVN.
+Download via SVN.
+svn checkout http://nattt.googlecode.com/svn/branch/tdsmapper/nat3/ support-read-only  
 
 == Step 2: Build/Run == 
 
