--- a/wiki/WinDevelNotes.wiki
+++ b/wiki/WinDevelNotes.wiki
@@ -5,7 +5,7 @@
   * Windows uses the TUN/TAP driver from OpenVPN. Instructions to download and install are [WindowsInstallation here].
   * The driver is used in the TAP mode mainly to support ethernet-TAP [openvpn.net/bridge.html bridging].
 
-= Specific notes w.r.t Network behavior of the TUN/TAP device */
+= Specific notes w.r.t Network behavior of the TUN/TAP device =
   * You must handle ARP for the network device. 
   * Replying to a query for an ARP request that asks for the address on the TUN/TAP device results in windows auto-configuring that device.
   * ARP queries for any network address in the TUN/TAP network should be replied with a different MAC address from that of the adapter (unlike Linux).
