Edited wiki page through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -13,7 +13,12 @@ Complete details are found [http://www.cs.arizona.edu/~bzhang/nat/nattt.htm here
 
 = List of pages on wiki =
 
+== Man/User pages ==
+
   * [Installation Installation]
   * [RunningNATTT Running NAT3D]
   * [ResolverSetup Resolver Setup]
   * [Errors Errors] faced with NAT3D.
+
+== Development pages ==
+  * [DeveloperPages Devel pages]
