--- a/wiki/Bridge.wiki
+++ b/wiki/Bridge.wiki
@@ -8,20 +8,22 @@ http://img651.imageshack.us/img651/2640/slide3i.jpg
 
 As shown in the image, you need to bridge the TAP interface with the internet adapter (wireless or Ethernet interface).
 
-Doing so allows network traffic on one interface to be seen by both the TAP device and the Internet adapter. For more technical details refer [BridgeTech this page].
+Doing so allows network traffic on one interface to be seen by both the TAP device and the Internet adapter. For more technical details refer [BridgeTech this page]. Please note that once you have bridged two interfaces, both lose their IP addresses, and the "virtual bridge adapter" gets the IP address (DHCP or static) instead.
+
+Note that you might need to disable the firewall on the TAP interface (add as accepted network) for NATTT to work.
 
 = Windows =
 
-Bridging on Windows is simple. Good information is found [http://www.home-network-help.com/network-bridge.html here]. 
+Bridging on Windows is simple. Refer the end of this section on further instructions. 
+
+Windows Vista/7 users need to select "Adapter Settings" on the Network and Devices center page instead of following steps 1 & 2 as shown in the link at the end of this section.
 
 http://img186.imageshack.us/img186/7469/vistabridge.png
 
-= Windows =
+Instructions on setting up a bridge are found [http://www.home-network-help.com/network-bridge.html here].
 
+= Linux =
 
-= Details =
+Linux bridging is a well known concept used in sever other areas such as Virtualization.
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+Good information is found [http://www.linuxfoundation.org/collaborate/workgroups/networking/bridge#Creating_a_bridge_device here]. You just need to create and add devices to the bridge.
