Edited wiki page through web user interface.

--- a/wiki/BridgeTech.wiki
+++ b/wiki/BridgeTech.wiki
@@ -4,12 +4,12 @@
 
 A software network bridge is a layer 2 link between two network adapters. Therefore, all traffic on either interface is seen by both interfaces.
 
-NAT3D works by assigning a new IP address from the subnet it is configured with, by
+NAT3D works by assigning a new IP address from the subnet assigned in the [ConfigFile config file]. NAT3D responds with an ARP request for an address in the subnet it is assigned. Since the TAP interface and the Internet adapter are bridged, the TAP interface sees all traffic and NAT3D just picks up the traffic destined to its subnet.
+
+The main loop of NAT3D listens to traffic on the Internet port (defined in [ConfigFile config file]), as well as the TAP device. The daemon does is read from one and write into the other.
+
+Therefore, if an external source sent a packet destined to another host via NAT3D, the following happens:
+
+The packet is received on the Internet port of NAT3D. NAT3D converts the packet into a frame destined to the IP address specified in the packet. On Windows, NAT3D makes ARP requests. On Linux, this is automatic. Then, the packet is written out to the TAP device, and since the Internet interface and the TAP device are bridged, the packet reaches the host! This is best illustrated by a diagram:
 
 
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
