--- a/wiki/BridgeTech.wiki
+++ b/wiki/BridgeTech.wiki
@@ -1,4 +1,4 @@
-#summary Some basic tech details about a software bridge
+#summary Some basic tech details about how NAT3D uses the software bridge
 
 = Introduction =
 
@@ -11,5 +11,3 @@ The main loop of NAT3D listens to traffic on the Internet port (defined in [Conf
 Therefore, if an external source sent a packet destined to another host via NAT3D, the following happens:
 
 The packet is received on the Internet port of NAT3D. NAT3D converts the packet into a frame destined to the IP address specified in the packet. On Windows, NAT3D makes ARP requests. On Linux, this is automatic. Then, the packet is written out to the TAP device, and since the Internet interface and the TAP device are bridged, the packet reaches the host! This is best illustrated by a diagram:
-
-
