--- a/wiki/Errors.wiki
+++ b/wiki/Errors.wiki
@@ -27,3 +27,7 @@ Check that NAT3D is handling ARP reply to machine X i.e. sending an ARP reply. I
 === Bridge mysteriously changes address every time NAT3D Runs/quits ===
 Windows: You probably have set the TUN/TAP device media status to "Application Controlled", which means that every time you start the TUN/TAP device, the bridge requests a new IP address.
 Back to [Introduction introduction].
+
+=== The TUN/TAP interface is not persistent ===
+Linux/Mac: Look at tunctl
+Windows: Go to the Networking center/Networking and devices. Click on the TUN/TAP device, click properties, click configuration and set the "Media Status" parameter to "Always connected"
