--- a/wiki/ConfigFile.wiki
+++ b/wiki/ConfigFile.wiki
@@ -23,27 +23,13 @@ To set up a resolver, see [ResolverSetup instructions].
 Example: resolver = 127.0.0.1
 
 
-== IP Address of the interface on which to listen (option: _ip_) ==
-The IP address of the network interface on which to listen for incoming tunneled packets. If you have multiple interfaces, the meanings differ for both the client and the server.
-
-*Client:*
-Address of interface on which you expect incoming packets to arrive. For a common machine, you probably have 2 interfaces - an Ethernet and a Wireless-LAN. Enter the address of the interface which is connected to the Internet.
-
-The command to get the ip address of the interfaces is _ifconfig_ on Linux/UNIX/Mac OS X. The interfaces are typically named "eth0/1.." for Ethernet and "wlan0/1.." or "en0/1.." on the Mac.
-
-On Windows, finding your IP address typically involves right-clicking the network connection icon in the tray (near the date), choosing properties, and one of options from there (depending on your specific Windows OS).
-
-_*Please do not enter 127.0.0.1 for the address of the interface.*_
-
-Example: ip = 70.23.223.12
-
 == Port number on which to listen (option: _port_) ==
 
 The port number is the port number on which NAT3D listens for incoming tunnel packets. Please note that you need to forward the port from the NAT box to the server installation of NAT3D for the application to work. For more details on how to forward the port, visit [http://www.portforward.com/ Port Forward].
 
 Example: port = 100
 
-== TUN/TAP details (optional) ==
+== TUN/TAP details (mandatory) ==
 
 If you plan to use NAT3D as a client, or as a server with the intention of making the server the only machine reachable behind the NAT box, you may omit these options
 
@@ -57,7 +43,20 @@ If no option is specified, a default of 10.254.0.0/16 is used.
 
 Setting _bridge_ to "on" means that no address is assigned to the TAP interface/adapter. Setting it to off means the TAP device/adapter is assigned the IP address specified.
 
+== Sample Config file ==
+The TUN/TAP device is set to a subnet (10.0.1.0/25) of the network the Wifi device runs on - 10.0.1.0/24
 
+{{{
+server = false
+port = 9876
+resolver = 127.0.0.1
+tapnetaddr = 10.0.1.0
+tapnetmask = 255.255.255.128
+natbox = 10.0.1.128
+}}}
+
+
+= Deprecated =
 == Sample config file ==
 
 *Server:* (behind a NAT box)
@@ -98,3 +97,21 @@ port = 101
 }}}
 
 The client requires the resolver, and is set to a resolver which can handle NAT3 queries.
+
+
+== IP Address of the interface on which to listen (option: _ip_) ==
+
+<font color="red">Automated since Revision 125</font>
+
+The IP address of the network interface on which to listen for incoming tunneled packets. If you have multiple interfaces, the meanings differ for both the client and the server.
+
+*Client:*
+Address of interface on which you expect incoming packets to arrive. For a common machine, you probably have 2 interfaces - an Ethernet and a Wireless-LAN. Enter the address of the interface which is connected to the Internet.
+
+The command to get the ip address of the interfaces is _ifconfig_ on Linux/UNIX/Mac OS X. The interfaces are typically named "eth0/1.." for Ethernet and "wlan0/1.." or "en0/1.." on the Mac.
+
+On Windows, finding your IP address typically involves right-clicking the network connection icon in the tray (near the date), choosing properties, and one of options from there (depending on your specific Windows OS).
+
+_*Please do not enter 127.0.0.1 for the address of the interface.*_
+
+Example: ip = 70.23.223.12
